# hyprland-events

./: README.md  pyproject.toml
src/hyprland_events/: __init__.py  dispatcher.py  events.py  types.py
tests/: test_dispatcher.py  test_events.py  test_types.py
